--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,5 @@
 <head>
-  <title>persfo-v1</title>
+  <title>Persfo-v1</title>
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, user-scalable=0" />
